Bug 514634 General Improvement of OffLine Testing, adding new options
Change-Id: I6f53731a14aaae1f491dc39f0ea714a60d48f546
Signed-off-by: Arnault Lapitre <arnault.lapitre@cea.fr>